changing operator (or - and) when selecting multiple values from the same facet node

--- a/Console/BExIS.Web.Shell/Areas/DDM/BExIS.Modules.Ddm.UI.csproj
+++ b/Console/BExIS.Web.Shell/Areas/DDM/BExIS.Modules.Ddm.UI.csproj
@@ -53,6 +53,9 @@
     <Reference Include="Ionic.Zip">
       <HintPath>..\..\..\..\Libraries\Ionic.Zip.dll</HintPath>
     </Reference>
+    <Reference Include="Lucene.Net">
+      <HintPath>..\..\..\..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Markdig, Version=0.30.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Markdig.0.30.4\lib\net452\Markdig.dll</HintPath>
     </Reference>
