--- a/Modules/DDM/BExIS.Ddm.Api/BExIS.Ddm.Api.csproj
+++ b/Modules/DDM/BExIS.Ddm.Api/BExIS.Ddm.Api.csproj
@@ -51,6 +51,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lucene.Net">
+      <HintPath>..\..\..\packages\Lucene.Net.3.0.3\lib\NET40\Lucene.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
