developers/addp#35 update web.config to show the internal queries

--- a/Console/BExIS.Web.Shell/web.config
+++ b/Console/BExIS.Web.Shell/web.config
@@ -33,7 +33,7 @@
     <add key="ConversationIsolationLevel" value="2" />
     <!--1: single DB session per unit of work (high isolation), 2: single DB session per HTTP request.-->
     <add key="UpdateSeedData" value="false" />
-    <add key="ShowQueries" value="false" />
+    <add key="ShowQueries" value="true" />
     <add key="DatabaseDialect" value="PostgreSQL82Dialect" />
     <!--PostgreSQL82Dialect, DB2Dialect-->
     <add key="AutoCommitTransactions" value="False" />
