--- a/Console/BExIS.Web.Shell/Areas/OAC/BExIS.Modules.OAC.UI.csproj
+++ b/Console/BExIS.Web.Shell/Areas/OAC/BExIS.Modules.OAC.UI.csproj
@@ -254,8 +254,8 @@
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Web.Services" />
-    <Reference Include="Telerik.Web.Mvc, Version=2013.2.611.340, Culture=neutral, PublicKeyToken=29ac1a93ec063d92, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\TelerikMvcExtensions.2013.2.611\lib\net40\Telerik.Web.Mvc.dll</HintPath>
+    <Reference Include="Telerik.Web.Mvc">
+      <HintPath>..\..\..\..\packages\Telerik.Web.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="Vaiona.Core">
       <HintPath>..\..\..\..\Libraries\Vaiona\Vaiona.Core.dll</HintPath>
