#36 local changes .. still in pprogress to link the annotations to the search attribute and convert

--- a/Modules/DDM/BExIS.Ddm.Providers.LuceneProvider/BExIS.Ddm.Providers.LuceneProvider.csproj
+++ b/Modules/DDM/BExIS.Ddm.Providers.LuceneProvider/BExIS.Ddm.Providers.LuceneProvider.csproj
@@ -177,6 +177,14 @@
       <Project>{252f7872-a69c-43a6-84b4-4d2abdbdd9ab}</Project>
       <Name>BExIS.Xml.Helpers</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\AAM\BExIS.Aam.Entities\BExIS.Aam.Entities.csproj">
+      <Project>{2B541D06-3259-4AA3-AE6A-452C8F67164D}</Project>
+      <Name>BExIS.Aam.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\AAM\BExIS.Aam.Services\BExIS.Aam.Services.csproj">
+      <Project>{898568BE-061E-44D2-A94C-04729F07DDCA}</Project>
+      <Name>BExIS.Aam.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BExIS.Ddm.Api\BExIS.Ddm.Api.csproj">
       <Project>{8519eac6-fbf8-48b3-813f-e0b9d3cc4a52}</Project>
       <Name>BExIS.Ddm.Api</Name>
