--- a/Console/BExIS.Web.Shell/web.config
+++ b/Console/BExIS.Web.Shell/web.config
@@ -14,7 +14,7 @@
 	  <add name="ApplicationServices" connectionString="Server=localhost;Port=5432;Database=bpp214-4__;Userid=postgres;Password=1;Pooling=true;MinPoolSize=2;MaxPoolSize=100;ConnectionIdleLifetime=3600;" />
 
     -->
-	  <add name="ApplicationServices" connectionString="Server=localhost;Port=5432;Database=pub216;Userid=postgres;Password=1;Pooling=true;MinPoolSize=2;MaxPoolSize=100;ConnectionIdleLifetime=3600;" />
+	  <add name="ApplicationServices" connectionString="Server=aquadiva-dev1.inf-bb.uni-jena.de;Port=5432;Database=216AD;Userid=postgres;Password=postgres;Pooling=true;MinPoolSize=2;MaxPoolSize=100;ConnectionIdleLifetime=3600;" />
 
   </connectionStrings>
   <appSettings file="../Workspace/General/Configurations/Credentials.config">
