Update Scripts reference from Svelte

--- a/Console/BExIS.Web.Shell/Areas/DCM/BExIS.Modules.Dcm.UI/BExIS.Modules.Dcm.UI.csproj
+++ b/Console/BExIS.Web.Shell/Areas/DCM/BExIS.Modules.Dcm.UI/BExIS.Modules.Dcm.UI.csproj
@@ -447,61 +447,39 @@
     <Content Include="Scripts\svelte\view\index.html" />
     <Content Include="Scripts\svelte\_app\env.js" />
     <Content Include="Scripts\svelte\_app\immutable\assets\0.C9yfffof.css" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\0.DLsbjxsX.css" />
     <Content Include="Scripts\svelte\_app\immutable\assets\4.BJQo6MCZ.css" />
     <Content Include="Scripts\svelte\_app\immutable\assets\CodeMirror.DMKri8do.css" />
     <Content Include="Scripts\svelte\_app\immutable\assets\eslint4b.bRh5xSvE.css" />
     <Content Include="Scripts\svelte\_app\immutable\assets\ProgressBar.Cirlo5Z8.css" />
     <Content Include="Scripts\svelte\_app\immutable\assets\_layout.BCq-Kwda.css" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.DyBfJzki.css" />
     <Content Include="Scripts\svelte\_app\immutable\assets\_page.C5ZGgZNs.css" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.ClKx0L_4.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.DjZVoOtO.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.B6CwSG2B.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.DBG65q7V.js" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.Dl2HiqHD.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.DddlA3jT.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.Ngf91g9x.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\index.CH-8sbRF.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\index.CiHPK1yE.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DVhKrnJD.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DyWTFnni.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.BhUOr-Xw.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\Page.Bkl3-QFW.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\ProgressBar.svelte_svelte_type_style_lang.BJ9KW1aQ.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\scheduler.C_o3LU93.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.CrjJV6mH.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.DDU2EjEq.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.BSaonwBy.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.lCF0l7ta.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B4f2X8Az.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B4wH1ktA.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B7mFRYPc.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\Table.B_UXwKgx.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Table.RVhvsgSk.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\TextInput.AzYEG7aR.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\TextInput.h7YpBags.js" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\vest.production.BXOqUVYh.js" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\vest.production.DZ6baSQo.js" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\app.BOZEeXGt.js" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\app.Oet1Ixu9.js" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\start.ByV_Ll1L.js" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\start.R5rMXdK5.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\0.C5MW3ehp.js" />
+    <Content Include="Scripts\svelte\_app\immutable\entry\app.qABOw-g5.js" />
+    <Content Include="Scripts\svelte\_app\immutable\entry\start.CGDIx9uR.js" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\0.DN6Vjid8.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\1.D4IJcBhE.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\1.fzGolj2c.js" />
+    <Content Include="Scripts\svelte\_app\immutable\nodes\1.CrOgtUjx.js" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\2.BQQZoyTc.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\2.DQuBHUHr.js" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\3.C5xq1BKn.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\3.C60GoegN.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\4.CToUjJKn.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\4.lSxwSV2S.js" />
+    <Content Include="Scripts\svelte\_app\immutable\nodes\4.BLb3Oh2Y.js" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\5.CyGzHVBA.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\5.DgmyieJF.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\6.CBLeLWwp.js" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\6.tb_X8p-6.js" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\7.CxD7-UTw.js" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\7.DkDIEchv.js" />
     <Content Include="Views\Help\Informations.xml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -583,8 +561,8 @@
     <Content Include="Scripts\svelte\view\index.html.gz" />
     <Content Include="Scripts\svelte\_app\env.js.br" />
     <Content Include="Scripts\svelte\_app\env.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\0.DLsbjxsX.css.br" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\0.DLsbjxsX.css.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\assets\0.C9yfffof.css.br" />
+    <Content Include="Scripts\svelte\_app\immutable\assets\0.C9yfffof.css.gz" />
     <Content Include="Scripts\svelte\_app\immutable\assets\4.BJQo6MCZ.css.br" />
     <Content Include="Scripts\svelte\_app\immutable\assets\4.BJQo6MCZ.css.gz" />
     <Content Include="Scripts\svelte\_app\immutable\assets\CodeMirror.DMKri8do.css.br" />
@@ -593,111 +571,67 @@
     <Content Include="Scripts\svelte\_app\immutable\assets\eslint4b.bRh5xSvE.css.gz" />
     <Content Include="Scripts\svelte\_app\immutable\assets\ProgressBar.Cirlo5Z8.css.br" />
     <Content Include="Scripts\svelte\_app\immutable\assets\ProgressBar.Cirlo5Z8.css.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.DyBfJzki.css.br" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.DyBfJzki.css.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.BCq-Kwda.css.br" />
+    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.BCq-Kwda.css.gz" />
     <Content Include="Scripts\svelte\_app\immutable\assets\_page.C5ZGgZNs.css.br" />
     <Content Include="Scripts\svelte\_app\immutable\assets\_page.C5ZGgZNs.css.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.DjZVoOtO.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.DjZVoOtO.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.B6CwSG2B.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.B6CwSG2B.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.Ngf91g9x.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.Ngf91g9x.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.ClKx0L_4.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.ClKx0L_4.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.Dl2HiqHD.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.Dl2HiqHD.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.DddlA3jT.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.DddlA3jT.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\index.CH-8sbRF.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\index.CH-8sbRF.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\index.CiHPK1yE.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\index.CiHPK1yE.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DVhKrnJD.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DVhKrnJD.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.BhUOr-Xw.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.BhUOr-Xw.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DyWTFnni.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DyWTFnni.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.Bkl3-QFW.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.Bkl3-QFW.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\ProgressBar.svelte_svelte_type_style_lang.BJ9KW1aQ.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\ProgressBar.svelte_svelte_type_style_lang.BJ9KW1aQ.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\scheduler.C_o3LU93.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\scheduler.C_o3LU93.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.CrjJV6mH.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.CrjJV6mH.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.lCF0l7ta.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.lCF0l7ta.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.DDU2EjEq.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.DDU2EjEq.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.BSaonwBy.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.BSaonwBy.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B4f2X8Az.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B4f2X8Az.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B4wH1ktA.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B4wH1ktA.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B7mFRYPc.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\stores.B7mFRYPc.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Table.RVhvsgSk.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Table.RVhvsgSk.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\TextInput.AzYEG7aR.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\TextInput.AzYEG7aR.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\vest.production.DZ6baSQo.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\vest.production.DZ6baSQo.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\app.BOZEeXGt.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\app.BOZEeXGt.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\start.ByV_Ll1L.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\start.ByV_Ll1L.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\0.C5MW3ehp.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\0.C5MW3ehp.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\1.fzGolj2c.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\1.fzGolj2c.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\2.DQuBHUHr.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\2.DQuBHUHr.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\3.C60GoegN.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\3.C60GoegN.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\4.CToUjJKn.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\4.CToUjJKn.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\5.DgmyieJF.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\5.DgmyieJF.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\6.CBLeLWwp.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\6.CBLeLWwp.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\7.DkDIEchv.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\7.DkDIEchv.js.gz" />
-    <Content Include="Scripts\svelte\_app\version.json" />
-    <Content Include="Scripts\svelte\_app\version.json.br" />
-    <Content Include="Scripts\svelte\_app\version.json.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\0.C9yfffof.css.br" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\0.C9yfffof.css.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.BCq-Kwda.css.br" />
-    <Content Include="Scripts\svelte\_app\immutable\assets\_layout.BCq-Kwda.css.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.ClKx0L_4.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\BaseCaller.ClKx0L_4.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.DBG65q7V.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\entry.DBG65q7V.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.DddlA3jT.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\eslint4b.es.DddlA3jT.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DyWTFnni.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\MultiSelect.DyWTFnni.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.Bkl3-QFW.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Page.Bkl3-QFW.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.DDU2EjEq.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\SlideToggle.DDU2EjEq.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.BSaonwBy.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\chunks\Spinner.BSaonwBy.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\Table.B_UXwKgx.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\Table.B_UXwKgx.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\TextInput.h7YpBags.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\TextInput.h7YpBags.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\vest.production.BXOqUVYh.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\chunks\vest.production.BXOqUVYh.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\app.Oet1Ixu9.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\app.Oet1Ixu9.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\start.R5rMXdK5.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\entry\start.R5rMXdK5.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\entry\app.qABOw-g5.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\entry\app.qABOw-g5.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\entry\start.CGDIx9uR.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\entry\start.CGDIx9uR.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\0.DN6Vjid8.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\0.DN6Vjid8.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\1.D4IJcBhE.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\1.D4IJcBhE.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\nodes\1.CrOgtUjx.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\nodes\1.CrOgtUjx.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\2.BQQZoyTc.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\2.BQQZoyTc.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\3.C5xq1BKn.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\3.C5xq1BKn.js.gz" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\4.lSxwSV2S.js.br" />
-    <Content Include="Scripts\svelte\_app\immutable\nodes\4.lSxwSV2S.js.gz" />
+    <Content Include="Scripts\svelte\_app\immutable\nodes\4.BLb3Oh2Y.js.br" />
+    <Content Include="Scripts\svelte\_app\immutable\nodes\4.BLb3Oh2Y.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\5.CyGzHVBA.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\5.CyGzHVBA.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\6.tb_X8p-6.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\6.tb_X8p-6.js.gz" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\7.CxD7-UTw.js.br" />
     <Content Include="Scripts\svelte\_app\immutable\nodes\7.CxD7-UTw.js.gz" />
+    <Content Include="Scripts\svelte\_app\version.json" />
+    <Content Include="Scripts\svelte\_app\version.json.br" />
+    <Content Include="Scripts\svelte\_app\version.json.gz" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
