--- a/Console/BExIS.Web.Shell/web.config
+++ b/Console/BExIS.Web.Shell/web.config
@@ -64,6 +64,7 @@
 		<add key="summary_adress" value="http://aquadiva-analysis2.inf-bb.uni-jena.de:2345" />
 		<add key="dataset_Sampling_data_id" value="361" />
 		<add key="dataset_Sampling_dates_id" value="362" />
+		<add key="defautPageSize" value="50" />
 
 		<add key="WorkspacePath" value="..\Workspace" />
 		<add key="DataPath" value="C:\Data" />
