change Unit conversion to be set on the web config of the app

--- a/Console/BExIS.Web.Shell/web.config
+++ b/Console/BExIS.Web.Shell/web.config
@@ -47,6 +47,7 @@
 		<!-- <add key="output_Folder" value="D:/WORK/HiWi uni-jena/Dev/qqq/" /> -->
 		<add key="output_Folder" value="C:/Users/Hamdi/Desktop/qqq/" />
 
+		<add key="force_unit_Conversion" value="True" />
 		<add key="semanticExtractionURL" value="http://aquadiva-docker.inf-bb.uni-jena.de:8080/getEntitiesRelation" />
 		<add key="semanticSearchURL" value="http://aquadiva-docker.inf-bb.uni-jena.de:8081/search" />
 		<add key="ad-ontology-merged.obda" value="ad-ontology-merged_.obda" />
