--- a/Console/BExIS.Web.Shell/Areas/DCM/BExIS.Modules.Dcm.UI/Scripts/svelte/.vite/manifest.json
+++ b/Console/BExIS.Web.Shell/Areas/DCM/BExIS.Modules.Dcm.UI/Scripts/svelte/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.qABOw-g5.js",
+    "file": "_app/immutable/entry/app.BhI2kEc5.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -38,7 +38,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CrOgtUjx.js",
+    "file": "_app/immutable/nodes/1.D-z12aAT.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -46,7 +46,7 @@
     "imports": [
       "_scheduler.C_o3LU93.js",
       "_index.CiHPK1yE.js",
-      "_entry.Dl2HiqHD.js"
+      "_entry.m5501gps.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -82,7 +82,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.BLb3Oh2Y.js",
+    "file": "_app/immutable/nodes/4.CaDemf6a.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -102,7 +102,7 @@
       "_BaseCaller.ClKx0L_4.js",
       "_stores.B4wH1ktA.js",
       "_Table.B_UXwKgx.js",
-      "_entry.Dl2HiqHD.js"
+      "_entry.m5501gps.js"
     ],
     "css": [
       "_app/immutable/assets/4.BJQo6MCZ.css"
@@ -251,8 +251,8 @@
       "_eslint4b.es.DddlA3jT.js"
     ]
   },
-  "_entry.Dl2HiqHD.js": {
-    "file": "_app/immutable/chunks/entry.Dl2HiqHD.js",
+  "_entry.m5501gps.js": {
+    "file": "_app/immutable/chunks/entry.m5501gps.js",
     "name": "entry",
     "imports": [
       "_scheduler.C_o3LU93.js",
@@ -327,12 +327,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CGDIx9uR.js",
+    "file": "_app/immutable/entry/start.rgGesZQs.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_entry.Dl2HiqHD.js"
+      "_entry.m5501gps.js"
     ]
   }
 }
